fixed videos on pages not fitting correctly

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+	.prose :where(iframe):not(:where([class~="not-prose"] *)) {
+		@apply aspect-video w-full h-auto
+	}
+}
